--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "LeafTag",
   "description": "Aplicativo para catalogação e organização de registros dendrológicos com suporte offline",
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "portrait-primary",
   "background_color": "#f8faf9",
   "theme_color": "#2c5e3f",
